--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -37,8 +37,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:src="@drawable/calendar_black"
-            android:layout_height="match_parent"
-            android:onClick="calendarPageClicked"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </LinearLayout>
