--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,93 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" tools:context=".MainActivity">
-    <!--android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"-->
-
-    <TextView
-        android:id="@+id/tvMAINhome"
-        android:text="Home"
-        android:textSize="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <TextView
-        android:id="@+id/tvMAINrecommendedPlan"
-        android:text="Recommended Plan"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-    <ImageView
-        android:id="@+id/ivMAINrecommendedPlanImage"
-        android:src="@drawable/landscape_540115_1920"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"/>
-    <TextView
-        android:id="@+id/tvMAINstaffPicks"
-        android:text="Staff Picks"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-    <ImageView
-        android:id="@+id/ivMAINstaffPicksImage"
-        android:src="@drawable/landscape_540115_1920"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25">
+    android:id="@+id/drawerLayout"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-        <ImageButton
-            android:src="@drawable/home_black"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent" />
-        <ImageButton
-            android:src = "@drawable/magnify"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:onClick="searchPage"/>
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/calendar_black"
-            android:layout_height="match_parent"
-            android:onClick="calendarPageClicked"/>
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" tools:context=".MainActivity">
+        <!--android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"-->
+
+        <TextView
+            android:id="@+id/tvMAINhome"
+            android:text="Home"
+            android:textSize="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/tvMAINrecommendedPlan"
+            android:text="Recommended Plan"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/ivMAINrecommendedPlanImage"
+            android:src="@drawable/landscape_540115_1920"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"/>
+        <TextView
+            android:id="@+id/tvMAINstaffPicks"
+            android:text="Staff Picks"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/ivMAINstaffPicksImage"
+            android:src="@drawable/landscape_540115_1920"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.25">
+
+
+            <ImageButton
+                android:src="@drawable/home_black"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <ImageButton
+                android:src = "@drawable/magnify"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:onClick="searchPage"/>
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/calendar_black"
+                android:layout_height="match_parent"
+                android:onClick="calendarPageClicked"/>
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <ListView
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:id="@+id/listview"
+        android:background="@color/material_grey_100"
+        ></ListView>
+
+
+</android.support.v4.widget.DrawerLayout>
