combined with steve's code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <android.support.v4.widget.DrawerLayout
     android:layout_width="match_parent"
-<<<<<<< HEAD
-=======
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
     android:layout_alignParentTop="true"
@@ -13,12 +11,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
->>>>>>> 99a5050e40ea32c69905e99700bac3bba68f56c2
+
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
     android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_centerHorizontal="true">
 
 
 
@@ -94,10 +90,9 @@
 
         </LinearLayout>
     </LinearLayout>
-<<<<<<< HEAD
-=======
+
 </LinearLayout>
->>>>>>> 99a5050e40ea32c69905e99700bac3bba68f56c2
+
 
     <ListView
         android:layout_width="250dp"
@@ -105,14 +100,12 @@
         android:layout_gravity="left"
         android:id="@+id/listview"
         android:background="@color/material_grey_100"
-<<<<<<< HEAD
         ></ListView>
 
 
 </android.support.v4.widget.DrawerLayout>
-=======
-    ></ListView>
 
 
-</android.support.v4.widget.DrawerLayout>
->>>>>>> 99a5050e40ea32c69905e99700bac3bba68f56c2
+
+
+
