--- a/app/src/main/res/layout/myplan_layout.xml
+++ b/app/src/main/res/layout/myplan_layout.xml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:text="Large Text"
-    android:textColor="#e7df1e"
-    android:id="@+id/textView1"
-    android:layout_gravity="center_horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linear_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" tools:context=".MainActivity">
 
-    ></TextView>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#e7df1e"
+        android:id="@+id/textView1"
+        android:gravity="center_horizontal"
+        android:layout_margin="@dimen/abc_text_size_large_material"
+        ></TextView>
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#e7df1e"
+        android:id="@+id/textView2"
+        android:gravity="center_horizontal"
+        android:layout_margin="@dimen/abc_text_size_large_material"
+        ></TextView>
+
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
+
