--- a/app/src/main/res/layout/activity_view_details.xml
+++ b/app/src/main/res/layout/activity_view_details.xml
@@ -8,19 +8,21 @@
     tools:context="com.example.android.cz2006androidproject.ViewDetails">
 
     <TextView android:text="@string/hello_world" android:layout_width="match_parent"
+        android:id="@+id/tvVIEWDETAILSname"
         android:layout_height="0dp"
         android:textSize="@dimen/abc_text_size_large_material"
         android:gravity="center"
-        android:layout_weight="2"/>
+        android:layout_weight="1"/>
     <ImageView
-        
+        android:id="@+id/ivVIEWDETAILSimage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"/>
     <TextView
+        android:id="@+id/tvVIEWDETAILSdetail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"/>
+        android:layout_weight="4"/>
 
 
 </LinearLayout>
