--- a/app/src/main/res/layout/list_row_detail.xml
+++ b/app/src/main/res/layout/list_row_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="com.example.windows7.schedule.MainActivity">
+    tools:context="com.example.android.cz2006androidproject.ScheduleListView">
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
