--- a/app/src/main/res/layout/activity_view_details.xml
+++ b/app/src/main/res/layout/activity_view_details.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.cz2006androidproject.ViewDetails">
+    tools:context="Boundary.ViewDetails">
 
     <TextView android:text="@string/hello_world" android:layout_width="match_parent"
         android:id="@+id/tvVIEWDETAILSname"
