--- a/app/src/main/res/layout/activity_schedule_list_view.xml
+++ b/app/src/main/res/layout/activity_schedule_list_view.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="Boundary.ScheduleListView">
+    tools:context="boundary.ScheduleListView">
 
     <ListView
         android:layout_width="match_parent"
