--- a/app/src/main/res/layout/activity_travel_planner.xml
+++ b/app/src/main/res/layout/activity_travel_planner.xml
@@ -17,6 +17,8 @@
         android:layout_height="103dp"
         android:paddingLeft="15dp"
         android:id="@+id/datePicker"
+        android:datePickerMode="spinner"
+        android:calendarViewShown="false"
         android:paddingRight="15dp"></DatePicker>
 
     <LinearLayout
