--- a/app/src/main/res/layout/activity_places_list_view.xml
+++ b/app/src/main/res/layout/activity_places_list_view.xml
@@ -4,10 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="boundary.SearchResult">
+    tools:context="boundary.PlacesListView">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:id="@+id/testerTextView"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/placesListView"
+        >
+
+    </ListView>
 
 </RelativeLayout>
