--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -7,7 +8,23 @@
     tools:context="boundary.SearchResult">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:id="@+id/testerTextView"
+        android:id="@+id/testerTextView1"
         android:layout_height="wrap_content" />
 
-</RelativeLayout>
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:id="@+id/testerTextView2"
+        android:layout_height="wrap_content" />
+
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:id="@+id/testerTextView3"
+        android:layout_height="wrap_content" />
+
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:id="@+id/testerTextView4"
+        android:layout_height="wrap_content" />
+
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:id="@+id/testerTextView5"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
