--- a/app/src/main/res/layout/activity_travel_planner.xml
+++ b/app/src/main/res/layout/activity_travel_planner.xml
@@ -3,18 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Travel Planner"
-        android:paddingLeft="15dp"
-        android:id="@+id/textView"
-        android:textSize="40dp" />
 
     <DatePicker
         android:layout_width="match_parent"
-        android:layout_height="103dp"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
         android:paddingLeft="15dp"
         android:id="@+id/datePicker"
         android:datePickerMode="spinner"
@@ -23,7 +16,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -38,10 +32,11 @@
             android:layout_height="wrap_content" />
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="right"
             android:text="ADD"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:onClick="addButtonClicked"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -51,6 +46,14 @@
     <ListView
         android:id="@+id/lvtp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
-
+        android:layout_height="0dp"
+        android:layout_weight="4"></ListView>
+    <Button
+        android:id="@+id/planButton"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Plan!"
+        android:onClick="locationPlanner"
+        />
 </LinearLayout>
