--- a/app/src/main/res/layout/activity_schedule_tab_switch.xml
+++ b/app/src/main/res/layout/activity_schedule_tab_switch.xml
@@ -1,14 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="boundary.ScheduleTabSwitch">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textSize="@dimen/abc_text_size_large_material"
+        android:id="@+id/dateInPlan"/>
     <TabHost
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
         android:id="@android:id/tabhost"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -30,4 +37,4 @@
                 android:layout_height="match_parent"></FrameLayout>
         </LinearLayout>
     </TabHost>
-</RelativeLayout>
+</LinearLayout>
