--- a/app/src/main/res/layout/activity_travel_planner.xml
+++ b/app/src/main/res/layout/activity_travel_planner.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="right"
-            android:text="ADD"
+            android:text="Add Place"
             android:textSize="20dp"
             android:onClick="addButtonClicked"/>
         <ImageView
