--- a/app/src/main/res/layout/travelplanner_adapter.xml
+++ b/app/src/main/res/layout/travelplanner_adapter.xml
@@ -6,13 +6,14 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:id="@+id/tpimg"
-        android:layout_height="wrap_content" />
+        android:layout_height="35dp" />
     <TextView
         android:layout_width="0dp"
         android:id="@+id/tptv1"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
-    <TextView
+        android:layout_weight="3"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_height="50dp" />
+    <!--<TextView
         android:layout_width="0dp"
         android:id="@+id/tptv2"
         android:layout_weight="1"
@@ -20,6 +21,6 @@
     <CheckBox
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
 </LinearLayout>
